added csv parser, drizzle sqlite db, tsx igdb fetcher

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,14 @@ node_modules/
 .env
 .token.json
 
+# Build output
+dist/
+
+# Database
+data/*.db
+data/*.db-journal
+data/*.db-wal
+
 # Generated files
 /lib/games/*
 /lib/publishers/*
