--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ TWITCH_CLIENT_ID=your_twitch_client_id_here
 TWITCH_CLIENT_SECRET=your_twitch_client_secret_here
 TWITCH_GRANT_TYPE=client_credentials
 
+DATABASE_URL=data/game-journaling.db
